--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: #050a2777;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -16,11 +16,7 @@
 
 a {
 	font-weight: 500;
-	color: #646cff;
 	text-decoration: inherit;
-}
-a:hover {
-	color: #535bf2;
 }
 
 body {
@@ -39,16 +35,16 @@ h1 {
 button {
 	border-radius: 8px;
 	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
+	padding: 0.6em 1em;
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: #1a1a1a;
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
+
 button:hover {
-	border-color: #646cff;
+	border-color: #fff;
 }
 button:focus,
 button:focus-visible {
@@ -65,5 +61,17 @@ button:focus-visible {
 	}
 	button {
 		background-color: #f9f9f9;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	:root {
+		font-size: 80%;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	:root {
+		font-size: 70%;
 	}
 }
